<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleBookPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/bookcover"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/BookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booktitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/imageView"/>

    <TextView
        android:id="@+id/Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_below="@+id/BookTitle"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"/>

    <TextView
        android:id="@+id/Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textColor="@android:color/black"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:layout_below="@+id/Summary"
        android:text="@string/description" />

    <TextView
        android:id="@+id/ISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/Description"
        android:text="@string/isbn"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/ISBNValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbnDefault"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/Description"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/ISBN"
        android:layout_toEndOf="@+id/ISBN"/>

    <TextView
        android:id="@+id/Genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_semi_colon"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/Description"
        android:layout_toRightOf="@+id/ISBNValue"
        android:layout_toEndOf="@+id/ISBNValue"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/GenreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Description"
        android:layout_toRightOf="@+id/Genre"
        android:layout_toEndOf="@+id/Genre"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:text="@string/genreDefault"
        android:textColor="@android:color/darker_gray" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ISBN"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="12dp"
        android:layout_alignBottom="@+id/CheckOut"
        android:layout_alignTop="@+id/CheckOut"
        android:layout_below="@+id/ratingBar"
        android:text="@string/stock"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/stockValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock"
        android:layout_toEndOf="@+id/stock"
        android:layout_below="@+id/ratingBar"
        android:paddingLeft="5dp"
        android:paddingTop="12dp"
        android:layout_alignBottom="@+id/CheckOut"
        android:layout_alignTop="@+id/CheckOut"
        android:text="@string/stockDefault" />

    <Button
        android:id="@+id/CheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:text="@string/check_out"/>

</RelativeLayout>